--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,15 @@
     <title>Home Page</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+    <nav class="navbar navbar-dark bg-dark fixed-top">
+        <div class="container-fluid justify-content-center">
+                <a class='navbar-brand' href="#">
+                    <img src="https://via.placeholder.com/150" alt="" width="30">
+                    Brayden O'Gorman
+                </a>
+                <ul class="nav justify-content-center">
                     <li class="nav-item">
-                        <a class='' href="#home">Home</a>
+                        <a class='nav-link' href="#home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class='nav-link' href="#about">About</a>
@@ -30,7 +30,6 @@
                         <a class='nav-link' href="#contact">Contact</a>
                     </li>
                 </ul>
-            </div>
         </div>
     </nav>
     <div class="sect-container">
