--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap" rel="stylesheet"> 
     <title>Home Page</title>
 </head>
 <body>
@@ -18,13 +20,10 @@
                 </a>
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
-                        <a class='nav-link' href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
                         <a class='nav-link' href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class='nav-link' href="#portfolio">Portfolio</a>
+                        <a class='nav-link' href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class='nav-link' href="#contact">Contact</a>
@@ -32,29 +31,49 @@
                 </ul>
         </div>
     </nav>
+    <!-- HOME PAGE -->
     <div class="sect-container">
-        <section id='home'>
-            <h1>Welcome To My Portfolio</h1>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Aliquid cum deleniti quisquam iste, perferendis inventore.
-            </p>
+        <section class="container-fluid main-section" id='home'>
+            <h1>Hello there, My name is Brayden</h1>
+            <div class="subtitle" >
+                <img class="about-img"  src="img/main-portrait.jpg" alt="">
+                <p>
+                    Welcome to my portfolio
+                </p>
+            </div>
         </section>
-        <section id='about'>
-            <h1>THIS IS MY ABOUT PAGE</h1>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Aliquid cum deleniti quisquam iste, perferendis inventore.
-            </p>
+        <!-- ABOUT AND SKILLS SECTION -->
+        <section class="container-fluid main-section" id='about'>
+                <div class='row d-flex flex-column align-items-center'>
+                    <div class='col'>
+                        <h1>Hey! I'm Brayden</h1>
+                    </div>
+                    <div class='col'>
+                        <img class="about-img"  src="img/drum-portrait.jpg" alt="">
+                    </div>
+                    <div class="col col-md-6">
+                        <p class="about-p">
+                            I am passionate about the combination of knowledge, 
+                            skill and technology and the way that they can combine to create new opportunities, 
+                            new strategies and solutions to old problems. I have the skills, and experience, to create,
+                            discover and improve life experiences for you and your customers.
+                        </p>
+                    </div>
+                </div>
         </section>
-        <section id='portfolio'>
+        <section class='container-fluid skills-section'>
+            <div class="skill-container">
+                <h1>SKILLS</h1>
+            </div>
+        </section>
+        <section class="container-fluid main-section" id='projects'>
             <h1>THIS IS MY PORTFOLIO</h1>
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Aliquid cum deleniti quisquam iste, perferendis inventore.
             </p>
         </section>
-        <section id='contact'>
+        <section class="container-fluid main-section" id='contact'>
             <h1>THIS IS MY CONTACT PAGE</h1>
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
