Trying to add animated scroll down for more on home page

--- a/src/index.html
+++ b/src/index.html
@@ -36,17 +36,20 @@
         <section class="container-fluid main-section" id='home'>
             <h1>Hello there, My name is Brayden</h1>
             <div class="subtitle" >
+                <img class="about-img"  src="img/main-portrait.jpg" alt="">
                 <p>
                     Welcome to my portfolio
                 </p>
-                <img class="about-img"  src="img/main-portrait.jpg" alt="">
             </div>
         </section>
         <!-- ABOUT AND SKILLS SECTION -->
-        <section class="container-fluid about-section" id='about'>
+        <section class="container-fluid main-section" id='about'>
                 <div class='row d-flex flex-column align-items-center'>
                     <div class='col'>
                         <h1>Hey! I'm Brayden</h1>
+                    </div>
+                    <div class='col'>
+                        <img class="about-img"  src="img/drum-portrait.jpg" alt="">
                     </div>
                     <div class="col col-md-6">
                         <p class="about-p">
@@ -55,9 +58,6 @@
                             new strategies and solutions to old problems. I have the skills, and experience, to create,
                             discover and improve life experiences for you and your customers.
                         </p>
-                    </div>
-                    <div class='col'>
-                        <img class="about-img"  src="img/drum-portrait.jpg" alt="">
                     </div>
                 </div>
         </section>
