CLeaned up home page, fixed padding issues on main text

--- a/src/index.html
+++ b/src/index.html
@@ -34,16 +34,21 @@
     <!-- HOME PAGE -->
     <div class="sect-container">
         <section class="container-fluid main-section" id='home'>
-            <h1>Hello there, My name is Brayden</h1>
-            <div class="subtitle" >
-                <img class="about-img"  src="img/main-portrait.jpg" alt="">
-                <p>
-                    Welcome to my portfolio
-                </p>
+
+            <div class="hello">
+                <h1>Hello there, My name is Brayden</h1>
             </div>
+                    <div class="subtitle" >
+                        <div>
+                            <p class="welcome">
+                                Welcome to my portfolio
+                            </p>
+                        </div>
+                            <img class="about-img"  src="img/main-portrait.jpg" alt="">
+                    </div>
         </section>
         <!-- ABOUT AND SKILLS SECTION -->
-        <section class="container-fluid main-section" id='about'>
+        <section class="container-fluid about-section" id='about'>
                 <div class='row d-flex flex-column align-items-center'>
                     <div class='col'>
                         <h1>Hey! I'm Brayden</h1>
