--- a/src/index.html
+++ b/src/index.html
@@ -8,31 +8,52 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <script src="script.js" async></script>
+    <script src="script.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <title>Home Page</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark fixed-top">
-        <div class="container-fluid justify-content-center">
-                <a class='navbar-brand' href="#">
-                    <img src="https://via.placeholder.com/150" alt="" width="30">
-                    Brayden O'Gorman
-                </a>
-                <ul class="nav justify-content-center">
-                    <li class="nav-item">
-                        <a class='nav-link' href="#about">About</a>
+
+    <!--------- NAVBAR --------->
+    <header class="header" id="header">
+        <nav class="nav_main contain">
+            <a href="#" class="nav_logo">
+               <img src="img/logo.png" alt="logo" style="width: 50px"> Brayden O'Gorman
+            </a>
+
+            <div class="nav_menu" id="nav-menu">
+                <ul class="nav_list grid">
+                    <li class="nav_item">
+                        <a href="#home" class="nav_link">
+                            <i class="uil uil-home nav_icon"></i> Home
+                        </a>
                     </li>
-                    <li class="nav-item">
-                        <a class='nav-link' href="#projects">Projects</a>
+                    <li class="nav_item">
+                        <a href="#about" class="nav_link"> 
+                            <i class="uil uil-user-circle nav_icon"></i> About
+                        </a>
                     </li>
-                    <li class="nav-item">
-                        <a class='nav-link' href="#contact">Contact</a>
+                    <li class="nav_item">
+                        <a href="#projects" class="nav_link"> 
+                            <i class="uil uil-scenery nav_icon"></i> Projects
+                        </a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#contact" class="nav_link"> 
+                            <i class="uil uil-at nav_icon"></i> Contact
+                        </a>
                     </li>
                 </ul>
-        </div>
-    </nav>
+                <i class="uil uil-times nav_close" id="nav-close"></i>
+            </div>
+            <div class="nav_buttons">
+                <div class="nav_toggle" id="nav-toggle">
+                    <i class="uil uil-apps nav_icon"></i>
+                </div>
+            </div>
+        </nav>
+    </header>
     <!-- HOME PAGE -->
     <div class="sect-container">
         <section class="container-fluid main-section" id='home'>
