Updated Media Queries for Desktop

--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,7 @@
                 <h2 class="section_title">Contact Me</h2>
                 <span class="section_subtitle">Get in Touch</span>
                 <div class="contact_container container grid">
-                    <div>
+                    <div class="contact_info">
                         <div class="contact_information">
                             <i class="uil uil-phone contact_icon"></i>
                             <div>
