--- a/src/index.html
+++ b/src/index.html
@@ -51,10 +51,10 @@
                 </ul>
                 <i class="uil uil-times nav_close" id="nav-close"></i>
             </div>
-            <div class="nav_buttons">
-                <div class="nav_toggle" id="nav-toggle">
+            <div id="icon-closed" class="nav_buttons closed">
+                <!-- <div class="nav_toggle" id="nav-toggle"> -->
                     <i class="uil uil-apps nav_icon"></i>
-                </div>
+                <!-- </div> -->
             </div>
         </nav>
     </header>
