Updated Skills section to longer show percentages, now shows logos

--- a/src/index.html
+++ b/src/index.html
@@ -128,32 +128,16 @@
                                     </div>
                                     <i class="uil uil-angle-down skills-arrow"></i>
                                 </div>
-                                <div class="skills-list grid">
-                                    <div class="skills-data">
-                                        <div class="skills-titles">
-                                            <h3 class="skills-name">HTML</h3>
-                                            <span class="skills-number">90%</span>
+                                <div class="skills-grid-container">
+                                    <div class="skills-list">
+                                        <div class="skills-html">
+                                            <img src="img/html-5.png" alt="html logo">
                                         </div>
-                                        <div class="skills-bar ">
-                                            <span class="skills-percentage skills-html"></span>
+                                        <div class="skills-css">
+                                            <img src="img/css.png" alt="html logo">
                                         </div>
-                                    </div>
-                                    <div class="skills-data">
-                                        <div class="skills-titles">
-                                            <h3 class="skills-name">CSS</h3>
-                                            <span class="skills-number">65%</span>
-                                        </div>
-                                        <div class="skills-bar">
-                                            <span class="skills-percentage skills-css"></span>
-                                        </div>
-                                    </div>
-                                    <div class="skills-data">
-                                        <div class="skills-titles">
-                                            <h3 class="skills-name">JavaScript</h3>
-                                            <span class="skills-number">50%</span>
-                                        </div>
-                                        <div class="skills-bar ">
-                                            <span class="skills-percentage skills-js"></span>
+                                        <div class="skills-js">
+                                            <img src="img/javascript-39399.png" alt="html logo" class="js-logo">
                                         </div>
                                     </div>
                                 </div>
@@ -169,33 +153,17 @@
                                     </div>
                                     <i class="uil uil-angle-down skills-arrow"></i>
                                 </div>
-                                <div class="skills-list grid">
-                                    <div class="skills-data">
-                                        <div class="skills-titles">
-                                            <h3 class="skills-name">Ruby</h3>
-                                            <span class="skills-number">80%</span>
+                                <div class="skills-grid-container">
+                                    <div class="skills-list">
+                                        <div class="skills-ruby">
+                                            <img src="img/Ruby.png" alt="html logo" class="ruby-logo">
                                         </div>
-                                        <div class="skills-bar ">
-                                            <span class="skills-percentage skills-ruby"></span>
+                                        <div class="skills-rails">
+                                            <img src="img/rails.png" alt="css logo" class="rails-logo">
                                         </div>
-                                    </div>
-                                    <div class="skills-data">
-                                        <div class="skills-titles">
-                                            <h3 class="skills-name">Rails</h3>
-                                            <span class="skills-number">75%</span>
-                                        </div>
-                                        <div class="skills-bar ">
-                                            <span class="skills-percentage skills-rails"></span>
-                                        </div>
-                                    </div>
-                                    <div class="skills-data">
-                                        <div class="skills-titles">
-                                            <h3 class="skills-name">Postgresql</h3>
-                                            <span class="skills-number">60%</span>
-                                        </div>
-                                        <div class="skills-bar ">
-                                            <span class="skills-percentage skills-sql"></span>
-                                        </div>
+                                        <div class="skills-postgres">
+                                            <img src="img/postgresql.png" alt="js logo" class="sql-logo">
+                                        </div>`
                                     </div>
                                 </div>
                             </div>
