--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-
+    <!-- JS Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" defer ></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.js" defer ></script>
+    <script src="js/swiper-bundle.min.js" defer ></script>
+    <script src="js/script.js" defer></script>
     <!-- SWIPER -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
@@ -96,16 +100,28 @@
                             <h2 class='section_title'>About Me</h2>
                             <span class="section_subtitle">Hi! I'm Brayden</span>
                         </div>
-                <div class='row d-flex justify-content-center align-items-center'>
+                <div class='row about-container'>
                     <div class='col about-image'>
                         <img class="about-img"  src="img/drum-portrait.jpg" alt="">
                     </div>
                     <div class="col-sm about-content d-flex flex-column align-items-center">
                         <div class="row d-flex justify-content-center">
                             <p class="about-p">
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur laboriosam eius nisi a enim iusto facilis voluptatibus corrupti reiciendis consectetur. Fugiat, vitae architecto quis distinctio quaerat delectus dolor quidem laborum?
+                                I am an aspiring web developer looking to
+                                take the next big step in my career. I am a
+                                confident, reliable hard worker who loves to
+                                learn and challenge myself. I have always
+                                loved tech and the constant innovation
+                                that this industry provides the world. Being
+                                apart of this process of innovation both
+                                excites and drives me. My coding and digital
+                                design credentials through Coder Academy
+                                has given me the programming skill-set
+                                required to achieve my goals within this
+                                industry.
+
                             </p>
-                            <a download='' href="img/test-resume.pdf" class="button button--flex">
+                            <a download='' href="img/BraydenOGorman-Resume.pdf" class="button button--flex">
                                 Download CV<i class="uil uil-import button_icon"></i>
                             </a>
                         </div>
@@ -182,9 +198,9 @@
                             <img src="img/the-pro-shop.png" alt="" class="project_img">
                             <div class="project_data">
                                 <h3 class="project_title">The Pro Shop</h3>
-                                <p class="project_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est omnis impedit officiis non, minima reiciendis!</p>
-                                <a href="#" class="button button_flex projects_button">
-                                    Demo
+                                <p class="project_description">The Pro shop is a 2 way marketplace where users are able to list golfing equipment and services for sale.</p>
+                                <a href="https://golf-market-bog.herokuapp.com/" class="button button_flex projects_button" target="_blank">
+                                    Preview
                                     <i class="uil uil-arrow-right button_icon "></i>
                                 </a>
                             </div>
@@ -194,9 +210,9 @@
                             <img src="img/flipbet.png" alt="" class="project_img">
                             <div class="project_data">
                                 <h3 class="project_title">Flip Bet</h3>
-                                <p class="project_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est omnis impedit officiis non, minima reiciendis!</p>
-                                <a href="#" class="button button_flex projects_button">
-                                    Demo
+                                <p class="project_description">Flip bet is a terminal base application that will allow users to make bets on whether a coin will flip on heads or tails. The user will begin at $250. The user will be able to sign-up and log in and out of the app via a username and password. if the user guesses correctly they will be awarded with double the amount of bet. if the user guesses incorrectly they will lose the amount they bet each time a user guesses correctly in a row they will be awarded a multiplier</p>
+                                <a href="https://github.com/Brayydzz/Flip-Bet" class="button button_flex projects_button" target="_blank">
+                                    Github
                                     <i class="uil uil-arrow-right button_icon "></i>
                                 </a>
                             </div>
@@ -302,12 +318,5 @@
                 </div>
             </div>
     </footer>
-
-
-    <!-- JS Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/script.js"></script>
 </body>
 </html>
